--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,5 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
