--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -20,35 +20,22 @@
   <div *ngIf="dataReady">
     <div class="floating-button">
       <button mat-fab>
-          <!-- Launches add field modal -->
-          <mat-icon aria-label="Add Field">add</mat-icon>
+        <!-- Launches add field modal -->
+        <mat-icon aria-label="Add Field">add</mat-icon>
       </button>
     </div>
     <!-- Form options displayed and editable -->
-    <!-- Actual form type display should be moved to item screen -->
     <form class="form" onsubmit="updateFormID(formID)">
-      <div *ngFor="field in form.fields">
-        <div *ngIf="field.type === 'text'">
-          <mat-form-field>
-            <input matInput [placeholder]="field.question" value="field.value">
-          </mat-form-field>
-        </div>
-        <div *ngIf="field.type === 'radio'">
-            <p>{ field.question }</p>
-            <mat-radio-group *ngFor="optionR in field.options" class="column-layout">
-                <mat-radio [value]="optionR.value" >{ optionR.helperText }</mat-radio>
-            </mat-radio-group>
-        </div>
-        <div *ngIf="field.type === 'checkbox'">
-            <p>{ field.question }</p>
-          <div *ngFor="optionC in field.options" class="column-layout">
-              <mat-checkbox [value]="optionC.value" >{ optionC.helperText }</mat-checkbox>
-          </div>
-        </div>
-        <div *ngIf="field.type === 'switch'">
-            <p>{ field.question }</p>
-            <mat-slide-toggle></mat-slide-toggle>
-        </div>
+      <div *ngFor="let field of fields">
+        <button mat-fab>
+          <!-- Launches add/edit field modal -->
+          <mat-icon aria-label="Add Field">edit</mat-icon>
+        </button>
+        <h4>
+          <mat-icon aria-label="Field Type" aria-hidden="true" [svgIcon]="getTypeIcon(field.type)"></mat-icon>
+          {{ field.question }}
+        </h4>
+        <br />
       </div>
     </form>
   </div>
