--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,69 +1,44 @@
-<div *ngIf="firstVisit" style="text-align:center">
-  <button mat-raised-button color="primary" (click)="makeBlankForm(formID)">
-    Create a form
-  </button>
-  or
-  <button mat-raised-button color="primary" (click)="toggle('showFormIDField')">
-    Load a form
-  </button>
-  <br />
-  <div *ngIf="showFormIDField" style="text-align:center">
-    <form class="form" onsubmit="updateFormID(formID)">
-      <mat-form-field>
-        <input matInput placeholder="Form ID" value="formID">
-      </mat-form-field>
-    </form>
-  </div>
+<div *ngIf="!dataReady">
+  <app-ui-loader [visible]="true"></app-ui-loader>
 </div>
 
-<div *ngIf="!firstVisit" style="text-align:center">
-  <div *ngIf="dataReady">
-    <div class="floating-button">
-      <button mat-fab>
-          <!-- Launches add field modal -->
-          <mat-icon aria-label="Add Field">add</mat-icon>
-      </button>
-    </div>
-    <!-- Form options displayed and editable -->
-    <!-- Actual form type display should be moved to item screen -->
-    <form class="form" onsubmit="updateFormID(formID)">
-      <div *ngFor="field in form.fields">
-        <div *ngIf="field.type === 'text'">
-          <mat-form-field>
-            <input matInput [placeholder]="field.question" value="field.value">
-          </mat-form-field>
-        </div>
-        <div *ngIf="field.type === 'radio'">
-            <p>{ field.question }</p>
-            <mat-radio-group *ngFor="optionR in field.options" class="column-layout">
-                <mat-radio [value]="optionR.value" >{ optionR.helperText }</mat-radio>
-            </mat-radio-group>
-        </div>
-        <div *ngIf="field.type === 'checkbox'">
-            <p>{ field.question }</p>
-          <div *ngFor="optionC in field.options" class="column-layout">
-              <mat-checkbox [value]="optionC.value" >{ optionC.helperText }</mat-checkbox>
-          </div>
-        </div>
-        <div *ngIf="field.type === 'switch'">
-            <p>{ field.question }</p>
-            <mat-slide-toggle></mat-slide-toggle>
+<div *ngIf="dataReady" style="text-align:center">
+  <form class="form" onsubmit="saveItem()">
+    <mat-form-field>
+      <input matInput [placeholder]="'Address:'" value="item.address">
+    </mat-form-field>
+    <button mat-fab>{{ item.score || '0' }}</button>
+    <div *ngFor="let field of form.fields">
+      <div *ngIf="field.type === 'text' && field.enabled">
+        <p>{{ field.question }}</p>
+        <mat-form-field>
+          <input matInput [placeholder]="field.value" value="field.value">
+        </mat-form-field>
+      </div>
+      <div *ngIf="field.type === 'radio' && field.enabled">
+        <p>{{ field.question }}</p>
+        <mat-radio-group *ngFor="let optionR of field.options" class="column-layout">
+          <mat-radio [value]="optionR.value" (onclick)="field.value = optionR.value">{{ optionR.helperText }}</mat-radio>
+        </mat-radio-group>
+      </div>
+      <div *ngIf="field.type === 'checkbox' && field.enabled">
+        <p>{{ field.question }}</p>
+        <div *ngFor="let optionC of field.options" class="column-layout">
+          <mat-checkbox [value]="optionC.value" (onclick)="field.value = optionC.value">{{ optionC.helperText }}</mat-checkbox>
         </div>
       </div>
-    </form>
-  </div>
-  <div *ngIf="!dataReady">
-    <app-ui-loader [visible]="true"></app-ui-loader>
-  </div>
-  <br />
-  <button mat-raised-button color="primary" (click)="saveForm(formID)">
-    Save Changes
-  </button>
-  <button mat-raised-button>
-    Cancel
-  </button>
-  <br />
-  <button mat-raised-button color="warn" (click)="makeBlankForm(formID)">
-    Start Over (Blank Form)
-  </button>
+      <div *ngIf="field.type === 'switch' && field.enabled">
+        <p>{{ field.question }}</p>
+        <mat-slide-toggle [(ngModel)]="field.value"></mat-slide-toggle>
+      </div>
+    </div>
+  </form>
 </div>
+
+<br />
+<button mat-raised-button color="primary" (click)="saveItem()">
+  Save Changes
+</button>
+<button mat-raised-button>
+  Cancel
+</button>
