Cleaned out most reference files & updated router

--- a/src/app/shared/top-navigation/top-navigation.component.html
+++ b/src/app/shared/top-navigation/top-navigation.component.html
@@ -5,12 +5,12 @@
     </a>
   </li>
   <li *ngIf="auth.isAuthenticated()">
-    <a routerLink="/rankings" routerLinkActive="active" title="Rankings">
+    <a routerLink="/leaderboard" routerLinkActive="active" title="Leaderboard">
       <mat-icon>reorder</mat-icon>
     </a>
   </li>
   <li *ngIf="auth.isAuthenticated()">
-    <a routerLink="/newitem" routerLinkActive="active" title="New Item">
+    <a routerLink="/item" routerLinkActive="active" title="New Item">
       <mat-icon>add</mat-icon>
     </a>
   </li>
