--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -11,12 +11,12 @@
 </div>
 
 <div *ngIf="dataReady">
-  <mat-list *ngFor="let item of (items | async)?">
+  <mat-list *ngFor="let item of items">
     <!-- Item address and item score -->
         <mat-list-item>
           <button mat-mini-fab>{{ item.score }}</button>
           {{ item.address }}
-          <mat-icon mat-list-icon [routerLink]="[{{ '/item', item.addressid }}]" routerLinkActive="active">edit</mat-icon>
+          <mat-icon mat-list-icon routerLink="'/item', item.addressid" routerLinkActive="active">edit</mat-icon>
         </mat-list-item>
         <mat-divider></mat-divider>
     </mat-list>
