--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,14 @@
 <div class="padded">
-  <h4>
-    Welcome! <a (click)="auth.login()">Log in</a> or <a (click)="auth.login()">Sign up</a> to start assessing!
-  </h4>
+  <div *ngIf="!auth.isAuthenticated()">
+    <h4>
+      Welcome!
+      <a (click)="auth.login()">Log in</a> or
+      <a (click)="auth.login()">Sign up</a> to start assessing!
+    </h4>
+  </div>
+  <div *ngIf="auth.isAuthenticated()">
+    <h4>
+      Thanks for logging in! Get started by creating a form.
+    </h4>
+  </div>
 </div>
