--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,25 +1,25 @@
 <div>
 
-<h2>LeaderBoard</h2>
+  <h2>Leaderboard</h2>
 
-<br />
-<button mat-raised-button color="primary" (click)="getItems()">
-  Refresh
-</button>
-<br />
+  <br />
+  <button mat-raised-button color="primary" (click)="getItems()">
+    Refresh
+  </button>
+  <br />
 
-<div *ngIf="!dataReady">
-  <app-ui-loader [visible]="true"></app-ui-loader>
-</div>
+  <div *ngIf="!dataReady">
+    <app-ui-loader [visible]="true"></app-ui-loader>
+  </div>
 
-<div *ngIf="dataReady">
-  <mat-list *ngFor="let item of items">
-    <!-- Item address and item score -->
-        <mat-list-item>
-          <button mat-mini-fab>{{ item.score }}</button>
-          {{ item.address }}
-          <mat-icon mat-list-icon routerLink="'/item', item.addressid" routerLinkActive="active">edit</mat-icon>
-        </mat-list-item>
-        <mat-divider></mat-divider>
+  <div *ngIf="dataReady">
+    <mat-list *ngFor="let item of items">
+      <!-- Item address and item score -->
+      <mat-list-item>
+        <button mat-mini-fab>{{ item.score }}</button>
+        {{ item.address }}
+        <mat-icon mat-list-icon routerLink="'/item', item.addressid" routerLinkActive="active">edit</mat-icon>
+      </mat-list-item>
+      <mat-divider></mat-divider>
     </mat-list>
-</div>
+  </div>
