--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 /* You can add global styles to this file, and also import other style files */
 body {
   background-color: #f8f8f8;
@@ -22,5 +24,3 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
