got rid of dependencies on weather and weather service

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,5 @@
 <h2>Profile</h2>
 <ul>
-  <li>{{(profile$ | async)?.name}}</li>
-  <li>{{(profile$ | async)?.username}}</li>
-  <li>{{(profile$ | async)?.email}}</li>
+  <li>Observables removed</li>
+  <!-->{{(profile$ | async)?.username}}</-->
 </ul>
-
