minor UI improvements to form

--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -39,10 +39,10 @@
         <mat-hint>Value of this option (number)</mat-hint>
       </mat-form-field>
       <button mat-button (click)="toggleAddAnOption()">Cancel</button>
-      <button mat-button (click)="addOption()" cdkFocusInitial>Save</button>
+      <button mat-button color="primary" (click)="addOption()" cdkFocusInitial>Save</button>
     </div>
     <div *ngIf="!addAnOption">
-      <button mat-button (click)="toggleAddAnOption()">Add</button>
+      <button mat-button color="primary" (click)="toggleAddAnOption()">Add</button>
     </div>
   </div>
   <mat-form-field>
@@ -61,5 +61,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Save Changes</button>
+  <button mat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Save Changes</button>
 </div>
