Maybe that Http Module is what we needed all along

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
   </div>
   <div *ngIf="auth.isAuthenticated()">
     <h4>
-      Thanks for logging in! Get started by creating a form.
+      Thanks for logging in! Get started by <a style="color: green" routerLink="/form" routerLinkActive="active">creating a form</a>.
     </h4>
   </div>
 </div>
