yikes! that login thing messed up the logic

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -41,13 +41,10 @@
           </td>
           <td>{{ field.question }}</td>
           <td class="formIconColumn">
-            <mat-icon
-              aria-label="Edit"
-              aria-hidden="true"
-              (click)="openDialog(field,i,false)">
-            edit</mat-icon>
+            <mat-icon aria-label="Edit" aria-hidden="true" (click)="openDialog(field,i,false)">
+              edit</mat-icon>
           </td>
-      </tr>
+        </tr>
       </div>
     </table>
   </div>
