--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
 
 <div class="main" *ngIf="auth.isAuthenticated()">
   <app-ui-top-navigation></app-ui-top-navigation>
-  <router-outlet></router-outlet>
+  <div class="mobile-container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
