Button colors and more logging

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -13,3 +13,9 @@
 .formIconColumn{
   width:30px;
 }
+.green{
+  background-color: #008171 !important;
+}
+.lightgreen{
+  background-color: #94b777 !important;
+}
