wohoo let's try showing the form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,10 @@
   </div>
   <div *ngIf="auth.isAuthenticated()">
     <h4>
-      Thanks for logging in! Get started by <a style="color: green" routerLink="/form" routerLinkActive="active">creating a form</a>.
+      Thanks for logging in!
+      <br />
+      <br />Get started by
+      <a style="color: green" routerLink="/form" routerLinkActive="active">creating a form</a>.
     </h4>
   </div>
 </div>
