woohoo more working ui

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -48,7 +48,7 @@
     <div class="floating-button">
       <button mat-fab (click)="openDialog(newField,9,true)">
         <!-- Displays add field form -->
-        <mat-icon aria-label="Add Field">add</mat-icon>
+        <mat-icon aria-label="Add Field" title="Add Field">add</mat-icon>
       </button>
     </div>
     <!-- Form fields displayed as list-->
@@ -80,7 +80,7 @@
   <button mat-raised-button>
     Cancel
   </button>
-  <br />
+  <br /><br />
   <button mat-raised-button color="warn" (click)="makeBlankForm()">
     Start Over (Blank Form)
   </button>
