--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -1,65 +1,87 @@
 <h1 mat-dialog-title>Add/Edit Field</h1>
 <div mat-dialog-content>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.order">
-    <mat-hint>The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
-  </mat-form-field>
-  <mat-form-field>
-    <mat-select placeholder="Field Type">
-      <mat-option *ngFor="let type of types" [(value)]="data.type">
-        {{ type.viewValue }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.question">
-    <mat-hint>What do you want to measure?</mat-hint>
-  </mat-form-field>
-  <div *ngIf="needsOptions(data.type)">
-    <div *ngIf="data.options">
-      <div *ngFor="let option of data.options; index as i">
-        <mat-form-field>
-          <input matInput [(ngModel)]="option.helperText">
-          <mat-hint>Text to show for this option</mat-hint>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput [(ngModel)]="option.value">
-          <mat-hint>Value of this option (number)</mat-hint>
-        </mat-form-field>
-        <button mat-button (click)="removeOption(i)">Delete</button>
+  <form class="form-horizontal" [formGroup]="questionData">
+    <fieldset>
+      <mat-form-field>
+        <mat-label for="question1">Question</mat-label>
+        <input matInput type="text" formControlName="question" id="question1">
+        <mat-hint>What do you want to measure?</mat-hint>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="type1">Type</mat-label>
+        <mat-select formControlName="type" id="type1" placeholder="Field Type">
+          <mat-option *ngFor="let t of types" [(value)]="t.value">
+            {{ t.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="order1">Order</mat-label>
+        <input matInput type="text" formControlName="order" id="order1" placeholder="0">
+        <mat-hint>The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
+      </mat-form-field>
+
+      <div *ngIf="needsOptions()">
+        <div *ngIf="data.options">
+          <div *ngFor="let option of data.options; index as i">
+            <form class="form-horizontal">
+              <mat-form-field>
+                <mat-label>Display Name: {{ option.helperText }}</mat-label>
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Value: {{ option.value }}</mat-label>
+              </mat-form-field>
+              <button mat-button (click)="removeOption(i)">Delete</button>
+            </form>
+          </div>
+        </div>
+        <div *ngIf="addAnOption"><!--
+          <form class="form-horizontal" formControlName="options">
+            <mat-form-field>
+              <mat-label for="type">Display Name</mat-label>
+              <input matInput type="text" formControlName="helperText" id="helperText">
+              <mat-hint>Text to show for this option</mat-hint>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label for="type">Value</mat-label>
+              <input matInput type="text" formControlName="optionValue" id="optionValue">
+              <mat-hint>Value of this option (number)</mat-hint>
+            </mat-form-field>
+            <button mat-button (click)="toggleAddAnOption()">Cancel</button>
+            <button mat-button color="primary" (click)="addOption()" cdkFocusInitial>Save</button>
+          </form>-->
+        </div>
+        <div *ngIf="!addAnOption">
+          <button mat-button color="primary" (click)="toggleAddAnOption()">Add</button>
+        </div>
       </div>
-    </div>
-    <div *ngIf="addAnOption">
+
       <mat-form-field>
-        <input matInput [(ngModel)]="newOption.helperText">
-        <mat-hint>Text to show for this option</mat-hint>
+        <mat-label for="maxValue1">Maximum Value</mat-label>
+        <input matInput type="text" formControlName="maxValue" id="maxValue1">
+        <mat-hint>What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="newOption.value">
-        <mat-hint>Value of this option (number)</mat-hint>
+        <mat-label for="value1">Default Value</mat-label>
+        <input matInput type="text" formControlName="value" id="value1">
+        <mat-hint>What's the default value for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
-      <button mat-button (click)="toggleAddAnOption()">Cancel</button>
-      <button mat-button color="primary" (click)="addOption()" cdkFocusInitial>Save</button>
-    </div>
-    <div *ngIf="!addAnOption">
-      <button mat-button color="primary" (click)="toggleAddAnOption()">Add</button>
-    </div>
-  </div>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.maxValue">
-    <mat-hint>What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.multiplier">
-    <mat-hint>How important is this, relative to other items? (field score is multiplied by this number)</mat-hint>
-  </mat-form-field>
-  <mat-form-field>
-    <mat-slide-toggle [(ngModel)]="data.disabled">Disabled</mat-slide-toggle>
-    <mat-hint>By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
-  </mat-form-field>
+      <mat-form-field>
+        <mat-label for="multiplier1">Multiplier</mat-label>
+        <input matInput type="text" formControlName="multiplier" id="multiplier1">
+        <mat-hint>How important is this, relative to other items? (field score is multiplied by this number - defaults to 1)</mat-hint>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="disabled1">Disable this field?</mat-label>
+        <mat-slide-toggle formControlName="disabled" id="disabled1">Disable</mat-slide-toggle>
+        <mat-hint>By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
+      </mat-form-field>
+    </fieldset>
+  </form>
+
   <p>Please note: you must still save the form after saving the field.</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Save Changes</button>
+  <button mat-button color="primary" (click)="save()" [mat-dialog-close]="data" cdkFocusInitial>Save Changes</button>
 </div>
