--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -19,7 +19,7 @@
   <div *ngIf="showFormIDField">
     <form class="form" [formGroup]="formIDform">
       <mat-form-field style="margin-right: 20px;">
-        <app-ui-input label="id" placeholder="Enter an ID here" [control]="formIDform.get('id')"></app-ui-input>
+        <app-ui-input label="id" placeholder="Enter an ID here" formControlName="id1"></app-ui-input>
       </mat-form-field>
       <button mat-raised-button (click)="updateFormID()">Fetch form</button>
       <br />
@@ -29,7 +29,7 @@
   <div *ngIf="showSpecificFormField">
     <form class="form" [formGroup]="specificForm">
       <mat-form-field style="margin-right: 20px;">
-        <app-ui-input label="id" placeholder="Enter an ID here" [control]="specificForm.get('id')"></app-ui-input>
+        <app-ui-input label="sid" placeholder="Enter an ID here" formControlName="sid1"></app-ui-input>
       </mat-form-field>
       <button mat-raised-button (click)="makeSpecificForm()">Create form</button>
       <br />
@@ -47,8 +47,8 @@
       </button>
     </div>
     <!-- Form fields displayed as list-->
-    <table *ngIf="(form | async)?.fields" class="formTable">
-      <div *ngFor="let field of (form | async)?.fields; index as i">
+    <table *ngIf="fields" class="formTable">
+      <div *ngFor="let field of fields; index as i">
         <tr>
           <td class="formIconColumn">
             <mat-icon aria-label="Delete" aria-hidden="true" (click)="removeField(i)">trash</mat-icon>
@@ -76,7 +76,7 @@
     Cancel
   </button>
   <br /><br />
-  <button mat-raised-button color="warn" (click)="makeBlankForm()">
+  <button mat-raised-button color="warn" (click)="clearForm()">
     Start Over (Blank Form)
   </button>
 </div>
